backend: new, start action from API (#21)
e.g. unlock, lock, ...
