# src/backend/door_lock_cloud_api/src/api/doorlocks.py
@@ -1,8 +1,18 @@
+from models.action_managers import MqttDoorLockActionManager, DoorLockActionManager
+from mqtt_client.client import MqttClient
+from mqtt_client.paho_client import PahoClient
+from models.actions import DoorLockActionType, DoorLockAction
 from models.doorlock import DoorLock, DoorState, LockState
 from database.database import Database
 from database.redis_database import RedisDatabase
+from models import definitions
+from typing import Dict
+import logging
 
 db: Database = RedisDatabase("doorlock-database", 6379)
+mqtt_client: MqttClient = PahoClient("mqtt-broker", 1883)
+
+doorlock_action_manager: DoorLockActionManager = MqttDoorLockActionManager(mqtt_client, db)
 
 def get_all_from_site(site_id: str):
     """
@@ -21,3 +31,25 @@ def get_device_from_site(site_id: str, device_id: str):
 
     else:
         return None, 404
+
+
+def post_doorlock_action(site_id: str, device_id: str, body: Dict):
+    """
+    Executes a doorlock action for a certain doorlock.
+    """
+    action_str: str = body[definitions.ACTION]
+
+    if db.does_doorlock_exist(site_id, device_id):
+        doorlock: DoorLock =  db.get_doorlock(site_id, device_id)
+
+        try:
+            doorlock_action_type: DoorLockActionType = DoorLockActionType[action_str]
+            doorlock_action_manager.execute_action(DoorLockAction(doorlock_action_type, "", doorlock))
+            return f"DoorLockAction: {doorlock_action_type.name} for {doorlock.to_str()} in progress", 200
+
+        except Exception as e:
+            logging.error(f"doorlocks: unable to parse action {e}")
+            return f"action [{action_str}] not found", 404
+
+    else:
+        return "Doorlock not found", 404
