# src/backend/door_lock_cloud_api/src/swagger.yaml
@@ -67,5 +67,39 @@ paths:
                   lockState:
                     type: string
 
+  /doorlocks/{site_id}/{device_id}/action:
+    post:
+      summary: "Executes an action for the provided device id."
+      operationId: "api.doorlocks.post_doorlock_action"
+      tags:
+        - "Door Locks Site"
+      description: "Executes an action for the door lock."
+      parameters:
+        - name: site_id
+          in: path
+          description: site Id
+          required: true
+          schema:
+            type: string
+        - name: device_id
+          in: path
+          description: device Id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                action:
+                  type: string
+      responses:
+        "200":
+          description: "Successful post doorlocks action"
+
+
 servers:
   - url: /
